fixed overflow wierdness on mobile and added some ui sugar

--- a/less/homepage.less
+++ b/less/homepage.less
@@ -187,7 +187,7 @@
      top: 0;
      left: 0;
      right: 0;
-     bottom: 0;
+     height: auto;
      #boundless-background {
         background-size: cover;
         -webkit-background-size: cover;
